--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Ak si sa tu ocitol a este si to nerozlustil, tak sup sup prec. Nech ta tu nevidim. -->
+<!-- Ak si to rozlustil, you may procede, ale nic prelomove nenajdes, jasne, ze ma ratoval chat s tymto kodom. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -181,3 +183,4 @@
   </script>
 </body>
 </html>
+
